parser.out
Created by PLY version 3.4 (http://www.dabeaz.com/ply)

Unused terminals:

    CONST
    STRING_TYPE
    EXTERN
    COLONEQUAL
    BOOLEAN_TYPE
    VAR
    UMINUS
    BOOLEAN

Grammar

Rule 0     S' -> program
Rule 1     program -> func_list
Rule 2     func_list -> function
Rule 3     func_list -> func_list function
Rule 4     function -> FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list END
Rule 5     function -> FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list SEMICOLON END
Rule 6     argsop -> arguments
Rule 7     argsop -> empty
Rule 8     arguments -> var_dec
Rule 9     arguments -> arguments COMMA var_dec
Rule 10    arguments -> arguments var_dec
Rule 11    arguments -> error
Rule 12    locals_op -> locals
Rule 13    locals_op -> empty
Rule 14    locals -> var_dec SEMICOLON
Rule 15    locals -> function SEMICOLON
Rule 16    locals -> locals var_dec SEMICOLON
Rule 17    locals -> locals function SEMICOLON
Rule 18    locals -> error
Rule 19    var_dec -> ID COLON type
Rule 20    var_dec -> ID type
Rule 21    type -> INT_TYPE
Rule 22    type -> FLOAT
Rule 23    type -> INT_TYPE LSBRACKET expression RSBRACKET
Rule 24    type -> FLOAT LSBRACKET expression RSBRACKET
Rule 25    declaration -> WHILE relation DO declaration
Rule 26    declaration -> IFthen
Rule 27    declaration -> ifthenelse
Rule 28    declaration -> ubication ASSIGN expression
Rule 29    declaration -> PRINT LPAREN STRING RPAREN
Rule 30    declaration -> WRITE LPAREN expression RPAREN
Rule 31    declaration -> READ LPAREN ubication RPAREN
Rule 32    declaration -> RETURN expression
Rule 33    declaration -> ID LPAREN expressions_listop RPAREN
Rule 34    declaration -> SKIP
Rule 35    declaration -> BREAK
Rule 36    declaration -> BEGIN dec_list END
Rule 37    declaration -> BEGIN END
Rule 38    IFthen -> IF relation THEN declaration
Rule 39    ifthenelse -> IF relation THEN declaration ELSE declaration
Rule 40    IFthen -> IF relation declaration
Rule 41    IFthen -> IF relation declaration ELSE declaration
Rule 42    dec_list -> declaration
Rule 43    dec_list -> dec_list SEMICOLON declaration
Rule 44    dec_list -> dec_list declaration
Rule 45    ubication -> ID
Rule 46    ubication -> ID LSBRACKET expression RSBRACKET
Rule 47    expression -> expression PLUS expression
Rule 48    expression -> expression MINUS expression
Rule 49    expression -> expression TIMES expression
Rule 50    expression -> expression DIVIDE expression
Rule 51    expression -> MINUS expression
Rule 52    expression -> PLUS expression
Rule 53    expression -> LPAREN expression RPAREN
Rule 54    expression -> ID LPAREN expressions_listop RPAREN
Rule 55    expression -> ID
Rule 56    expression -> ID LSBRACKET expression RSBRACKET
Rule 57    expression -> numero
Rule 58    expression -> INT_TYPE LPAREN expression RPAREN
Rule 59    expression -> FLOAT_TYPE LPAREN expression RPAREN
Rule 60    expressions_listop -> expressions_list
Rule 61    expressions_listop -> empty
Rule 62    expressions_list -> expression
Rule 63    expressions_list -> expressions_list COMMA expression
Rule 64    relation -> expression LT expression
Rule 65    relation -> expression LE expression
Rule 66    relation -> expression GT expression
Rule 67    relation -> expression GE expression
Rule 68    relation -> expression EQ expression
Rule 69    relation -> expression NE expression
Rule 70    relation -> relation AND relation
Rule 71    relation -> relation OR relation
Rule 72    relation -> NOT relation
Rule 73    relation -> LPAREN relation RPAREN
Rule 74    relation -> error
Rule 75    numero -> INTEGER
Rule 76    numero -> FLOAT
Rule 77    empty -> <empty>

Terminals, with rules where they appear

AND                  : 70
ASSIGN               : 28
BEGIN                : 4 5 36 37
BOOLEAN              : 
BOOLEAN_TYPE         : 
BREAK                : 35
COLON                : 19
COLONEQUAL           : 
COMMA                : 9 63
CONST                : 
DIVIDE               : 50
DO                   : 25
ELSE                 : 39 41
END                  : 4 5 36 37
EQ                   : 68
EXTERN               : 
FLOAT                : 22 24 76
FLOAT_TYPE           : 59
FUNC                 : 4 5
GE                   : 67
GT                   : 66
ID                   : 4 5 19 20 33 45 46 54 55 56
IF                   : 38 39 40 41
INTEGER              : 75
INT_TYPE             : 21 23 58
LE                   : 65
LPAREN               : 4 5 29 30 31 33 53 54 58 59 73
LSBRACKET            : 23 24 46 56
LT                   : 64
MINUS                : 48 51
NE                   : 69
NOT                  : 72
OR                   : 71
PLUS                 : 47 52
PRINT                : 29
READ                 : 31
RETURN               : 32
RPAREN               : 4 5 29 30 31 33 53 54 58 59 73
RSBRACKET            : 23 24 46 56
SEMICOLON            : 5 14 15 16 17 43
SKIP                 : 34
STRING               : 29
STRING_TYPE          : 
THEN                 : 38 39
TIMES                : 49
UMINUS               : 
VAR                  : 
WHILE                : 25
WRITE                : 30
error                : 11 18 74

Nonterminals, with rules where they appear

IFthen               : 26
argsop               : 4 5
arguments            : 6 9 10
dec_list             : 4 5 36 43 44
declaration          : 25 38 39 39 40 41 41 42 43 44
empty                : 7 13 61
expression           : 23 24 28 30 32 46 47 47 48 48 49 49 50 50 51 52 53 56 58 59 62 63 64 64 65 65 66 66 67 67 68 68 69 69
expressions_list     : 60 63
expressions_listop   : 33 54
func_list            : 1 3
function             : 2 3 15 17
ifthenelse           : 27
locals               : 12 16 17
locals_op            : 4 5
numero               : 57
program              : 0
relation             : 25 38 39 40 41 70 70 71 71 72 73
type                 : 19 20
ubication            : 28 31
var_dec              : 8 9 10 14 16

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . func_list
    (2) func_list -> . function
    (3) func_list -> . func_list function
    (4) function -> . FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list END
    (5) function -> . FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list SEMICOLON END

    FUNC            shift and go to state 2

    function                       shift and go to state 1
    program                        shift and go to state 3
    func_list                      shift and go to state 4

state 1

    (2) func_list -> function .

    FUNC            reduce using rule 2 (func_list -> function .)
    $end            reduce using rule 2 (func_list -> function .)


state 2

    (4) function -> FUNC . ID LPAREN argsop RPAREN locals_op BEGIN dec_list END
    (5) function -> FUNC . ID LPAREN argsop RPAREN locals_op BEGIN dec_list SEMICOLON END

    ID              shift and go to state 5


state 3

    (0) S' -> program .



state 4

    (1) program -> func_list .
    (3) func_list -> func_list . function
    (4) function -> . FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list END
    (5) function -> . FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list SEMICOLON END

    $end            reduce using rule 1 (program -> func_list .)
    FUNC            shift and go to state 2

    function                       shift and go to state 6

state 5

    (4) function -> FUNC ID . LPAREN argsop RPAREN locals_op BEGIN dec_list END
    (5) function -> FUNC ID . LPAREN argsop RPAREN locals_op BEGIN dec_list SEMICOLON END

    LPAREN          shift and go to state 7


state 6

    (3) func_list -> func_list function .

    FUNC            reduce using rule 3 (func_list -> func_list function .)
    $end            reduce using rule 3 (func_list -> func_list function .)


state 7

    (4) function -> FUNC ID LPAREN . argsop RPAREN locals_op BEGIN dec_list END
    (5) function -> FUNC ID LPAREN . argsop RPAREN locals_op BEGIN dec_list SEMICOLON END
    (6) argsop -> . arguments
    (7) argsop -> . empty
    (8) arguments -> . var_dec
    (9) arguments -> . arguments COMMA var_dec
    (10) arguments -> . arguments var_dec
    (11) arguments -> . error
    (77) empty -> .
    (19) var_dec -> . ID COLON type
    (20) var_dec -> . ID type

    error           shift and go to state 11
    RPAREN          reduce using rule 77 (empty -> .)
    ID              shift and go to state 12

    var_dec                        shift and go to state 8
    argsop                         shift and go to state 9
    arguments                      shift and go to state 10
    empty                          shift and go to state 13

state 8

    (8) arguments -> var_dec .

    COMMA           reduce using rule 8 (arguments -> var_dec .)
    ID              reduce using rule 8 (arguments -> var_dec .)
    RPAREN          reduce using rule 8 (arguments -> var_dec .)


state 9

    (4) function -> FUNC ID LPAREN argsop . RPAREN locals_op BEGIN dec_list END
    (5) function -> FUNC ID LPAREN argsop . RPAREN locals_op BEGIN dec_list SEMICOLON END

    RPAREN          shift and go to state 14


state 10

    (6) argsop -> arguments .
    (9) arguments -> arguments . COMMA var_dec
    (10) arguments -> arguments . var_dec
    (19) var_dec -> . ID COLON type
    (20) var_dec -> . ID type

    RPAREN          reduce using rule 6 (argsop -> arguments .)
    COMMA           shift and go to state 16
    ID              shift and go to state 12

    var_dec                        shift and go to state 15

state 11

    (11) arguments -> error .

    COMMA           reduce using rule 11 (arguments -> error .)
    ID              reduce using rule 11 (arguments -> error .)
    RPAREN          reduce using rule 11 (arguments -> error .)


state 12

    (19) var_dec -> ID . COLON type
    (20) var_dec -> ID . type
    (21) type -> . INT_TYPE
    (22) type -> . FLOAT
    (23) type -> . INT_TYPE LSBRACKET expression RSBRACKET
    (24) type -> . FLOAT LSBRACKET expression RSBRACKET

    COLON           shift and go to state 18
    INT_TYPE        shift and go to state 19
    FLOAT           shift and go to state 17

    type                           shift and go to state 20

state 13

    (7) argsop -> empty .

    RPAREN          reduce using rule 7 (argsop -> empty .)


state 14

    (4) function -> FUNC ID LPAREN argsop RPAREN . locals_op BEGIN dec_list END
    (5) function -> FUNC ID LPAREN argsop RPAREN . locals_op BEGIN dec_list SEMICOLON END
    (12) locals_op -> . locals
    (13) locals_op -> . empty
    (14) locals -> . var_dec SEMICOLON
    (15) locals -> . function SEMICOLON
    (16) locals -> . locals var_dec SEMICOLON
    (17) locals -> . locals function SEMICOLON
    (18) locals -> . error
    (77) empty -> .
    (19) var_dec -> . ID COLON type
    (20) var_dec -> . ID type
    (4) function -> . FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list END
    (5) function -> . FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list SEMICOLON END

    error           shift and go to state 25
    BEGIN           reduce using rule 77 (empty -> .)
    ID              shift and go to state 12
    FUNC            shift and go to state 2

    function                       shift and go to state 21
    locals_op                      shift and go to state 22
    var_dec                        shift and go to state 23
    locals                         shift and go to state 26
    empty                          shift and go to state 24

state 15

    (10) arguments -> arguments var_dec .

    COMMA           reduce using rule 10 (arguments -> arguments var_dec .)
    ID              reduce using rule 10 (arguments -> arguments var_dec .)
    RPAREN          reduce using rule 10 (arguments -> arguments var_dec .)


state 16

    (9) arguments -> arguments COMMA . var_dec
    (19) var_dec -> . ID COLON type
    (20) var_dec -> . ID type

    ID              shift and go to state 12

    var_dec                        shift and go to state 27

state 17

    (22) type -> FLOAT .
    (24) type -> FLOAT . LSBRACKET expression RSBRACKET

    COMMA           reduce using rule 22 (type -> FLOAT .)
    ID              reduce using rule 22 (type -> FLOAT .)
    RPAREN          reduce using rule 22 (type -> FLOAT .)
    SEMICOLON       reduce using rule 22 (type -> FLOAT .)
    LSBRACKET       shift and go to state 28


state 18

    (19) var_dec -> ID COLON . type
    (21) type -> . INT_TYPE
    (22) type -> . FLOAT
    (23) type -> . INT_TYPE LSBRACKET expression RSBRACKET
    (24) type -> . FLOAT LSBRACKET expression RSBRACKET

    INT_TYPE        shift and go to state 19
    FLOAT           shift and go to state 17

    type                           shift and go to state 29

state 19

    (21) type -> INT_TYPE .
    (23) type -> INT_TYPE . LSBRACKET expression RSBRACKET

    COMMA           reduce using rule 21 (type -> INT_TYPE .)
    ID              reduce using rule 21 (type -> INT_TYPE .)
    RPAREN          reduce using rule 21 (type -> INT_TYPE .)
    SEMICOLON       reduce using rule 21 (type -> INT_TYPE .)
    LSBRACKET       shift and go to state 30


state 20

    (20) var_dec -> ID type .

    SEMICOLON       reduce using rule 20 (var_dec -> ID type .)
    COMMA           reduce using rule 20 (var_dec -> ID type .)
    ID              reduce using rule 20 (var_dec -> ID type .)
    RPAREN          reduce using rule 20 (var_dec -> ID type .)


state 21

    (15) locals -> function . SEMICOLON

    SEMICOLON       shift and go to state 31


state 22

    (4) function -> FUNC ID LPAREN argsop RPAREN locals_op . BEGIN dec_list END
    (5) function -> FUNC ID LPAREN argsop RPAREN locals_op . BEGIN dec_list SEMICOLON END

    BEGIN           shift and go to state 32


state 23

    (14) locals -> var_dec . SEMICOLON

    SEMICOLON       shift and go to state 33


state 24

    (13) locals_op -> empty .

    BEGIN           reduce using rule 13 (locals_op -> empty .)


state 25

    (18) locals -> error .

    ID              reduce using rule 18 (locals -> error .)
    FUNC            reduce using rule 18 (locals -> error .)
    BEGIN           reduce using rule 18 (locals -> error .)


state 26

    (12) locals_op -> locals .
    (16) locals -> locals . var_dec SEMICOLON
    (17) locals -> locals . function SEMICOLON
    (19) var_dec -> . ID COLON type
    (20) var_dec -> . ID type
    (4) function -> . FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list END
    (5) function -> . FUNC ID LPAREN argsop RPAREN locals_op BEGIN dec_list SEMICOLON END

    BEGIN           reduce using rule 12 (locals_op -> locals .)
    ID              shift and go to state 12
    FUNC            shift and go to state 2

    function                       shift and go to state 34
    var_dec                        shift and go to state 35

state 27

    (9) arguments -> arguments COMMA var_dec .

    COMMA           reduce using rule 9 (arguments -> arguments COMMA var_dec .)
    ID              reduce using rule 9 (arguments -> arguments COMMA var_dec .)
    RPAREN          reduce using rule 9 (arguments -> arguments COMMA var_dec .)


state 28

    (24) type -> FLOAT LSBRACKET . expression RSBRACKET
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression TIMES expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . MINUS expression
    (52) expression -> . PLUS expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . ID LPAREN expressions_listop RPAREN
    (55) expression -> . ID
    (56) expression -> . ID LSBRACKET expression RSBRACKET
    (57) expression -> . numero
    (58) expression -> . INT_TYPE LPAREN expression RPAREN
    (59) expression -> . FLOAT_TYPE LPAREN expression RPAREN
    (75) numero -> . INTEGER
    (76) numero -> . FLOAT

    MINUS           shift and go to state 45
    PLUS            shift and go to state 40
    LPAREN          shift and go to state 41
    ID              shift and go to state 43
    INT_TYPE        shift and go to state 37
    FLOAT_TYPE      shift and go to state 36
    INTEGER         shift and go to state 42
    FLOAT           shift and go to state 38

    expression                     shift and go to state 44
    numero                         shift and go to state 39

state 29

    (19) var_dec -> ID COLON type .

    SEMICOLON       reduce using rule 19 (var_dec -> ID COLON type .)
    COMMA           reduce using rule 19 (var_dec -> ID COLON type .)
    ID              reduce using rule 19 (var_dec -> ID COLON type .)
    RPAREN          reduce using rule 19 (var_dec -> ID COLON type .)


state 30

    (23) type -> INT_TYPE LSBRACKET . expression RSBRACKET
    (47) expression -> . expression PLUS expression
    (48) expression -> . expression MINUS expression
    (49) expression -> . expression TIMES expression
    (50) expression -> . expression DIVIDE expression
    (51) expression -> . MINUS expression
    (52) expression -> . PLUS expression
    (53) expression -> . LPAREN expression RPAREN
    (54) expression -> . ID LPAREN expressions_listop RPAREN
    (55) expression -> . ID
    (56) expression -> . ID LSBRACKET expression RSBRACKET
    (57) expression -> . numero
    (58) expression -> . INT_TYPE LPAREN expression RPAREN
    (59) expression -> . FLOAT_TYPE LPAREN expression RPAREN
    (75) numero -> . INTEGER
    (76) numero -> . FLOAT

    MINUS           shift and go to state 45
    PLUS            shift and go to state 40
    LPAREN          shift and go to state 41
    ID              shift and go to state 43
    INT_TYPE        shift and go to state 37
    FLOAT_TYPE      shift and go to state 36
    INTEGER         shift and go to state 42
    FLOAT           shift and go to state 38

    expression                     shift and go to state 46
    numero                         shift and go to state 39

state 31

    (15) locals -> function SEMICOLON .

    ID              reduce using rule 15 (locals -> function SEMICOLON .)
    FUNC            reduce using rule 15 (locals -> function SEMICOLON .)
    BEGIN           reduce using rule 15 (locals -> function SEMICOLON .)


state 32

    (4) function -> FUNC ID LPAREN argsop RPAREN locals_op BEGIN . dec_list END
    (5) function -> FUNC ID LPAREN argsop RPAREN locals_op BEGIN . dec_list SEMICOLON END
    (42) dec_list -> . declaration
    (43) dec_list -> . dec_list SEMICOLON declaration
    (44) dec_list -> . dec_list declaration
    (25) declaration -> . WHILE relation DO declaration
    (26) declaration -> . IFthen
    (27) declaration -> . ifthenelse
    (28) declaration -> . ubication ASSIGN expression
    (29) declaration -> . PRINT LPAREN STRING RPAREN
    (30) declaration -> . WRITE LPAREN expression RPAREN
    (31) declaration -> . READ LPAREN ubication RPAREN
    (32) declaration -> . RETURN expression
    (33) declaration -> . ID LPAREN expressions_listop RPAREN
    (34) declaration -> . SKIP
    (35) declaration -> . BREAK
    (36) declaration -> . BEGIN dec_list END
    (37) declaration -> . BEGIN END
    (38) IFthen -> . IF relation THEN declaration
    (40) IFthen -> . IF relation declaration
    (41) IFthen -> . IF relation declaration ELSE declaration
    (39) ifthenelse -> . IF relation THEN declaration ELSE declaration
    (45) ubication -> . ID
    (46) ubication -> . ID LSBRACKET expression RSBRACKET

    WHILE           shift and go to state 49
    PRINT           shift and go to state 51
    WRITE           shift and go to state 55
    READ            shift and go to state 48
    RETURN          shift and go to state 47
    ID              shift and go to state 59
    SKIP            shift and go to state 54
    BREAK           shift and go to state 61
    BEGIN           shift and go to state 53
    IF              shift and go to state 60

    ifthenelse                     shift and go to state 52
    dec_list                       shift and go to state 50
    declaration                    shift and go to state 56
    ubication                      shift and go to state 57
    IFthen                         shift and go to state 58

state 33

    (14) locals -> var_dec SEMICOLON .
